--- a/02_web/01_DOM/01_get-element-node/05_HTMLCollection-NodeList.html
+++ b/02_web/01_DOM/01_get-element-node/05_HTMLCollection-NodeList.html
@@ -85,8 +85,14 @@
             console.log(childNodes);
 
             for(let i = 0; i < childNodes.length; i++){
+                //removeChild 메소드가 호출 될 떄마다
+                //childNodes 가 실시간 변경이 되어
+                // 홀수번쨰 1, 3, 5 ,7 요소만 삭제가 된다.
                 $lists.removeChild(childNodes[i]);
             }
         </script>
+        <pre>
+            
+        </pre>
 </body>
 </html>
