--- a/02_web/02_Event/04_DOM_dafault-action/01_prevent-browser-action.html
+++ b/02_web/02_Event/04_DOM_dafault-action/01_prevent-browser-action.html
@@ -23,6 +23,11 @@
         .addEventListener('click', e =>{
             e.preventDefault();
         })
+
+        document.querySelector('input[type=checkbox]')
+                .addEventListener('click', e =>{
+                    e.preventDefault(); 
+                })
     </script>
 </body>
 </html>
