--- a/02_web/02_Event/04_DOM_dafault-action/01_prevent-browser-action.html
+++ b/02_web/02_Event/04_DOM_dafault-action/01_prevent-browser-action.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>브라우저 기본 동작 중단</h1>
+    <h1>01. 브라우저 기본 동작 중단</h1>
     <pre>
-        이벤트 객체의 preventDefault 메소드는
-        DOM 요소의 기본 동작은 중단시킬 수 있다. 
-        예시
-        - a 태그에 href="dada" 지정 된 링크로 이동하거나
-        - checkbox,radio 버튼 등 클릭하면 체크하거나
-        - 체크를 해체하는 행위를 기본 동작이라고 한다.
+    이벤트 객체의 preventDefault 메소드는
+    DOM 요소의 기본 동작을 중단시킬 수 있다.
+    예시
+    - a 태그에 href="dada" 지정 된 링크로 이동하거나
+    - checkbox, radio 버튼 등 클릭하면 체크하거나
+    - 체크를 해제하는 행위를 기본 동작이라고 한다.
     </pre>
-    
     <a href="https://www.naver.com">네이버</a>
     <input type="checkbox">클릭
     <script>
         document.querySelector('a')
-        .addEventListener('click', e =>{
-            e.preventDefault();
-        })
-
+                .addEventListener('click', e => {
+                    e.preventDefault();
+                });
         document.querySelector('input[type=checkbox]')
-                .addEventListener('click', e =>{
-                    e.preventDefault(); 
+                .addEventListener('click', e => {
+                    e.preventDefault();
                 })
     </script>
 </body>
