--- a/02_web/03_Timer/01_timer-method/02_interval.html
+++ b/02_web/03_Timer/01_timer-method/02_interval.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <h1>02. interval</h1>
+    <pre>
+    setInterval(func|code [, delay, param1, param2, ...])
+    전달 받은 시간으로 반복적으로 동작하는 타이머 함수
+    이후 타이머가 만료될 때까지 계속된다.
+    </pre>
     <script>
         let count = 1;
-        const timerId = setInterval(() =>{
-            console.log(count++);
+        const timerId = setInterval(()=>{
+            console.log(count);
+            if(count++ === 5) {
+                clearInterval(timerId);
+            }
         }, 1000);
     </script>
 </body>
